# bitquill

./: .gitignore  481.bundle.js  Cargo.toml  README.md  build.sh  bundle.js  delta_composer.js  index.html  wasm-pack.toml  webpack.config.js
src/: delta.rs  edit_analyzer.rs  lib.rs  timestamps.rs
static/styles/: main.css
www/: delta_composer.js  index.html  index.js
