workspace = { members = ["src-tauri"] }
[package]
name = "bitquill_wasm"
version = "0.1.0"
edition = "2021"
authors = ["Nick @Ciphernom <btconometrics@protonmail.com>"]
description = "Digital Observer Protocol Editor with Delta-Based Merkle Tree Implementation"
license = "GPL-3.0-or-later"
repository = "https://github.com/staterootchain/bitquill/"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
gloo-net = "0.5"  # or the latest version available
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.5"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Performance",
    "PerformanceTiming"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[features]
default = ["console_error_panic_hook"]
